# empirical-scaling-harness

./: .gitignore  README.md  analysis.ipynb  config.py  data.py  main.py  model.py  pyproject.toml  requirements.txt  scaling_experiment.ipynb  sweep.py  trainer.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_model.py
