[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirical-scaling-harness"
version = "0.1.0"
description = "Automated verification of power-law scaling for transformer architecture variants (GeLU vs SwiGLU)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["machine-learning", "scaling-laws", "transformers", "gelu", "swiglu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "datasets>=2.14.0,<3.0.0",
    # Training utilities
    "tensorboard>=2.14.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    # Analysis
    "scipy>=1.11.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0,<2.0.0",
    "ipywidgets>=8.0.0,<9.0.0",
]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "black>=23.0.0,<25.0.0",
    "mypy>=1.5.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.urls]
Repository = "https://github.com/mmcmanus1/empirical-scaling-harness"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.setuptools]
py-modules = ["config", "model", "data", "trainer", "sweep", "main"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | logs
    | \.ipynb_checkpoints
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    ".ipynb_checkpoints",
]

[tool.ruff.isort]
known-first-party = ["config", "model", "data", "trainer", "sweep"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "logs/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "logs/*",
    ".venv/*",
    "*.ipynb",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
